deployment/cart-service/blue-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-blue
  namespace: cart-service
  labels:
    app: cart-service
    environment: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart-service
      environment: blue
  template:
    metadata:
      labels:
        app: cart-service
        environment: blue
    spec:
      containers:
      - name: cart-service
        image: binamin/cart-service:latest
        ports:
        - containerPort: 7000
        resources:
          requests:
            memory: "128Mi"
            cpu: "20m"
          limits:
            memory: "256Mi"
            cpu: "50m"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /readiness
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 5
