deployment/cart-service/service.yaml
# Service to route traffic to either blue or green environment

apiVersion: v1
kind: Service
metadata:
  name: cart-s-service
  namespace: cart-service
spec:
  selector:
      app: cart-service
      environment: blue # initially routes to blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7000
